syntax = "proto3";

package agent_status;

// Define the service for agent status updates
service AgentStatusService {
  // Request initial agent status and subscribe to future updates
  rpc SubscribeToAgentStatus (AgentStatusRequest) returns (stream AgentStatusResponse) {}
  
  // Request a one-time full agent status update
  rpc GetAgentStatus (AgentStatusRequest) returns (AgentStatusResponse) {}

  // Agent-initiated push of its current status (unsolicited update)
  rpc SendAgentStatus (AgentStatusUpdateRequest) returns (AgentStatusUpdateResponse) {}
}

// Request message for agent status
message AgentStatusRequest {
  string broker_id = 1;  // ID of the requesting broker
}

// Response message containing agent status information
message AgentStatusResponse {
  repeated AgentInfo agents = 1;
  bool is_full_update = 2;  // Whether this is a complete agent list or just updates
}

// Agent-initiated status update request
message AgentStatusUpdateRequest {
  AgentInfo agent = 1;
}

// Simple ack/response for status update
message AgentStatusUpdateResponse {
  bool success = 1;
  string message = 2;
}

// Information about an individual agent
message AgentInfo {
  string agent_id = 1;
  string agent_name = 2;
  string last_seen = 3;  // ISO format timestamp
  map<string, string> metrics = 4; // All agent state as key/value pairs
}